methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:13: error: ':' expected but ')' found.
  def faireV(k){
              ^MethodsPicture:39: error: identifier expected but '}' found.
} 
^